--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,18 @@
     "@zeit/eslint-config-node": "^0.3.0",
     "@zeit/git-hooks": "^0.1.4",
     "babel-preset-env": "^1.7.0",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "eslint": "^5.10.0",
+    "graphql": "^14.0.2",
+    "graphql-cli": "^2.17.0",
+    "graphql-yoga": "^1.16.7",
+    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.7",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "prisma": "^1.22.2",
+    "prisma-binding": "^2.2.8"
   },
   "eslintConfig": {
     "extends": [
