--- a/backend/variables.env.sample
+++ b/backend/variables.env.sample
@@ -1,2 +1,3 @@
-PRISMA_ENDPOINT="prisma_endpoint"
-PRISMA_SECRET="prisma_secret"
+PRISMA_ENDPOINT="you_prisma_endpoint"
+PRISMA_SECRET="your_super_secret_prisma_key"
+FRONTEND_URLS='http://localhost:7777'
