--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,42 @@
   "description": "Frontend of Photorice app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next -p 7777",
+    "build": "next build",
+    "start": "next start",
+    "test": "NODE_ENV=test jest --watch"
   },
   "author": "Lorenzo Cinque <lore.cinque@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "apollo-boost": "^0.1.22",
+    "apollo-client": "^2.4.7",
+    "babel-plugin-styled-components": "^1.9.3",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "next": "^7.0.2",
+    "next-with-apollo": "^3.3.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-apollo": "^2.3.2",
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "graphql-tools": "^4.0.3",
+    "jest": "^23.6.0",
+    "jest-dom": "^3.0.0",
+    "jest-transform-graphql": "^2.1.0",
+    "prettier": "^1.15.3",
+    "react-testing-library": "^5.3.2"
+  }
 }
