--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.10.0",
     "next": "^7.0.2",
     "next-with-apollo": "^3.3.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
