--- a/backend/variables.env.sample
+++ b/backend/variables.env.sample
@@ -1,4 +1,4 @@
 PRISMA_ENDPOINT="you_prisma_endpoint"
 PRISMA_SECRET="your_super_secret_prisma_key"
-FRONTEND_URLS='http://localhost:7777'
+FRONTEND_URL='http://localhost:7777'
 APP_SECRET='your_app_secret_password'
