Add heroku-postbuild command to allow deploying the frontend on heroku

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start",
-    "test": "NODE_ENV=test jest --watch"
+    "start": "next start -p $PORT",
+    "test": "NODE_ENV=test jest --watch",
+    "heroku-postbuild": "next build"
   },
   "author": "Lorenzo Cinque <lore.cinque@gmail.com>",
   "license": "MIT",
