--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
+    "react-spinners": "^0.4.7",
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
