Add possibility to set a location when the user upload a photo

--- a/backend/variables.env.sample
+++ b/backend/variables.env.sample
@@ -2,3 +2,4 @@ PRISMA_ENDPOINT="you_prisma_endpoint"
 PRISMA_SECRET="your_super_secret_prisma_key"
 FRONTEND_URL='http://localhost:7777'
 APP_SECRET='your_app_secret_password'
+GOOGLE_GEOCODER_API_KEY='you_api_key'
