--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "graphql-cli": "^2.17.0",
     "graphql-yoga": "^1.16.7",
     "jsonwebtoken": "^8.4.0",
+    "node-geocoder": "^3.22.0",
     "nodemon": "^1.18.7",
     "prettier": "^1.15.3",
     "prisma": "^1.22.2",
