--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "apollo-boost": "^0.1.22",
     "apollo-client": "^2.4.7",
     "babel-plugin-styled-components": "^1.9.3",
+    "dotenv-webpack": "^1.5.7",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "next": "^7.0.2",
@@ -25,6 +26,7 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
+    "react-google-maps": "^9.4.5",
     "react-spinners": "^0.4.7",
     "styled-components": "^4.1.2"
   },
