--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "photorice-backend",
+  "name": "futugram-backend",
   "version": "1.0.0",
-  "description": "Backend of Photorice app.",
+  "description": "Backend of futugram.",
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/index.js",
